(library
 (name proofdb_client)              ; This is the name you will use in
                                    ; Coq's `Declare ML Module`, and
                                    ; the name of the main OCaml
                                    ; module of your plugin.

 (public_name coq-proofdb-client.plugin) ; This makes the plugin
                                    ; installable; recommended, must
                                    ; match opam package name.

 (synopsis "ProofDB Client")         ; Synopsis, used in META generation.

 (flags :standard -rectypes -w -27 -verbose ) ; Coq requires the `-rectypes`
                                    ; flag; CoqPP generated code
                                    ; requires to disable warning 27
                                    ; often.

 (libraries                         ; OCaml Libraries we want to link
                                    ; with, your choice here.
   curl
   ezcurl
   yojson
   base64
   coq-core.vernac                  ; Needed for vernac extend.
   coq-core.pretyping
   coq-core.plugins.ltac            ; Needed for tactic extend.
 )

  (foreign_stubs
    (language c)
    (names hamming)
  )



)

; This will let Dune know about Coq's .mlg grammar files.
(coq.pp (modules ce_syntax))
